# Sautosub-ai-backend

./: .replit  pyproject.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
artifacts/autosub-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  render-free.yaml  render.yaml  requirements.txt
artifacts/autosub-backend/.replit-artifact/: artifact.edit.toml
artifacts/autosub-backend/app/: config.py  main.py  store.py
artifacts/autosub-backend/app/models/: job.py
artifacts/autosub-backend/app/routers/: download.py  status.py  subtitles.py  translate.py  upload.py
artifacts/autosub-backend/app/services/: audio_service.py  file_service.py  transcription_service.py
artifacts/autosub-backend/app/utils/: srt_generator.py  srt_translator.py
