[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "faster-whisper==1.1.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.19",
    "requests>=2.34.2",
    "uvicorn[standard]==0.32.1",
]
